vpc/vpc.tf
resource "aws_vpc" "vpc_terraform" {
  cidr_block       = "10.0.0.0/16"

  tags = {
    Name = "VPC-terraform"
  }
}
